# world-happiness-report-2021---streamlit

./: README.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
