[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
streamlit = "^1.16.0"
plotly = "^5.11.0"
seaborn = "^0.12.1"
matplotlib = "^3.6.2"
jupyter = "^1.0.0"
notebook1 = "^6.4.0-alpha.0"
notebook = "^6.5.2"
scipy = "^1.9.3"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"